--- a/common/common.scss
+++ b/common/common.scss
@@ -215,9 +215,9 @@ a {
   &.active {
     border-radius: var(--mint-border-radius);
     transition: all 0.3s linear;
-    background: var(--mint-color-mint);
-    color: var(--secondary);
-    border: 1px solid var(--mint-color-mint);
+    background: var(--tertiary);
+    color: var(--primary);
+    border: 1px solid var(--tertiary);
   }
 }
 
