--- a/common/common.scss
+++ b/common/common.scss
@@ -338,6 +338,7 @@ a:hover {
 
 .custom-search-banner-wrap {
   border-radius: var(--mint-border-radius);
+  color: var(--primary);
   background: linear-gradient(
     270deg,
     var(--tertiary-medium) 0%,
